# apple_carving_pozoyan_r_o

./: CppProperties.json  README.md
apple_carving/: .build.bat  CMakeLists.txt
apple_carving/apple_carving/: CMakeLists.txt  apple_carving.cpp  apple_carving.hpp
